--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,33 @@
         </dependency>
     </dependencies>
     <properties>
-    <java.version>1.8</java.version>
+        <java.version>1.8</java.version>
     </properties>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>Spring-boot-maven-plugin</artifactId><!--Инструмент использующий плагин для работы-->
+                <artifactId>spring-boot-maven-plugin</artifactId><!--Инструмент использующий плагин для работы-->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>example.MainApplication</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
